// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`About Project test create project  1`] = `
<div>
  <div
    class="OverlaySpinner--overlaySpinner"
  >
    <form
      action="#"
      class="FormikForm--main"
    >
      <div>
        <div
          class="Layout--horizontal StyledProps--main"
        >
          <div
            class="Layout--vertical StyledProps--main StyledProps--padding-xxlarge"
            style="width: 50%;"
          >
            <div
              class="StyledProps--font StyledProps--main"
              style="min-height: 450px;"
            >
              <div
                class="Layout--horizontal StyledProps--main StyledProps--padding-bottom-large"
              >
                <h3
                  class="StyledProps--font StyledProps--font-h3 StyledProps--main StyledProps--font-variation-h3"
                  level="3"
                >
                  projectsOrgs.aboutProject
                </h3>
              </div>
              <div
                class="InputWithIdentifier--txtNameContainer TextInput--main"
              >
                <div
                  class="Layout--horizontal Layout--layout-spacing-xsmall StyledProps--main InputWithIdentifier--txtIdContainer"
                >
                  <div
                    class="Text--withDocsTooltip"
                    data-tooltip-id="universalInputNameWithId"
                  >
                    <p
                      class="StyledProps--font StyledProps--main"
                    >
                      Id
                    </p>
                  </div>
                  <p
                    class="StyledProps--font StyledProps--main"
                  >
                    :
                  </p>
                  <span
                    class="bp3-popover-wrapper"
                  >
                    <span
                      class="bp3-popover-target"
                    >
                      <div
                        class="bp3-editable-text bp3-editable-text-placeholder InputWithIdentifier--idValue"
                        tabindex="0"
                      >
                        <span
                          class="bp3-editable-text-content"
                          style="height: 1px; line-height: 1px; min-width: 0;"
                        />
                      </div>
                    </span>
                  </span>
                  <span
                    class="bp3-icon StyledProps--main"
                    data-icon="Edit"
                    style="vertical-align: middle; cursor: pointer;"
                  >
                    <svg
                      height="12"
                      viewBox="0 0 16 16"
                      width="12"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        clip-rule="evenodd"
                        d="M11.207.485a.5.5 0 01.354-.146 3.5 3.5 0 013.5 3.5.5.5 0 01-.146.353l-11 11a.5.5 0 01-.354.147h-3a.5.5 0 01-.5-.5v-3a.5.5 0 01.146-.354l11-11zm.553.862L1.061 12.046v2.293h2.293l10.7-10.7a2.5 2.5 0 00-2.294-2.292z"
                        fill="currentColor"
                        fill-rule="evenodd"
                      />
                      <path
                        clip-rule="evenodd"
                        d="M11.89 2.646a.5.5 0 010 .708L8.353 6.889a.5.5 0 01-.708-.707l3.536-3.536a.5.5 0 01.707 0z"
                        fill="currentColor"
                        fill-rule="evenodd"
                        opacity="0.3"
                      />
                    </svg>
                  </span>
                </div>
                <div
                  class="bp3-form-group"
                  data-id="name-0"
                >
                  <label
                    class="bp3-label"
                    for="name"
                  >
                    <span
                      class="Tooltip--acenter"
                      data-tooltip-id="projectsForm_name"
                    >
                      Name
                    </span>
                     
                    <span
                      class="bp3-text-muted"
                    />
                  </label>
                  <div
                    class="bp3-form-content"
                  >
                    <div
                      class="bp3-input-group"
                    >
                      <input
                        autocomplete="off"
                        class="bp3-input"
                        name="name"
                        type="text"
                        value=""
                      />
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="Layout--horizontal Layout--layout-spacing-small StyledProps--main StyledProps--margin-bottom-xsmall"
              >
                <div
                  class="bp3-form-group"
                  data-id="color-1"
                >
                  <label
                    class="bp3-label"
                    for="color"
                  >
                    <span
                      class="Tooltip--acenter"
                      data-tooltip-id="projectsForm_color"
                    >
                      color
                    </span>
                     
                    <span
                      class="bp3-text-muted"
                    />
                  </label>
                  <div
                    class="bp3-form-content"
                  >
                    <span
                      class="bp3-popover-wrapper"
                    >
                      <span
                        class="bp3-popover-target"
                      >
                        <button
                          class="bp3-button Button--button StyledProps--font StyledProps--main ColorPicker--picker Button--with-current-color Button--withRightIcon"
                          style="width: 60px; height: 38px;"
                          type="button"
                        >
                          <span
                            class="bp3-button-text"
                          >
                            <span
                              class="ColorPicker--color"
                              style="width: calc(60px - 45px); background: rgb(0, 99, 247);"
                            />
                          </span>
                          <span
                            class="bp3-icon bp3-icon-caret-down StyledProps--main"
                            icon="caret-down"
                          >
                            <svg
                              data-icon="caret-down"
                              height="16"
                              viewBox="0 0 16 16"
                              width="16"
                            >
                              <desc>
                                caret-down
                              </desc>
                              <path
                                d="M12 6.5c0-.28-.22-.5-.5-.5h-7a.495.495 0 00-.37.83l3.5 4c.09.1.22.17.37.17s.28-.07.37-.17l3.5-4c.08-.09.13-.2.13-.33z"
                                fill-rule="evenodd"
                              />
                            </svg>
                          </span>
                        </button>
                      </span>
                    </span>
                  </div>
                </div>
                <div
                  class="bp3-form-group"
                  data-id="orgIdentifier-2"
                >
                  <label
                    class="bp3-label"
                    for="orgIdentifier"
                  >
                    <span
                      class="Tooltip--acenter"
                      data-tooltip-id="projectsForm_orgIdentifier"
                    >
                      orgLabel
                    </span>
                     
                    <span
                      class="bp3-text-muted"
                    />
                  </label>
                  <div
                    class="bp3-form-content"
                  >
                    <div
                      class="bp3-popover-wrapper Select--main bp3-fill"
                    >
                      <div
                        class="bp3-popover-target"
                      >
                        <div
                          class="bp3-input-group"
                        >
                          <input
                            autocomplete="off"
                            class="bp3-input"
                            name="orgIdentifier"
                            placeholder="- Select -"
                            style="padding-right: 0px;"
                            type="text"
                            value=""
                          />
                          <span
                            class="bp3-input-action"
                          >
                            <span
                              class="bp3-icon bp3-icon-chevron-down StyledProps--main StyledProps--padding-small"
                              icon="chevron-down"
                            >
                              <svg
                                data-icon="chevron-down"
                                height="14"
                                viewBox="0 0 16 16"
                                width="14"
                              >
                                <desc>
                                  chevron-down
                                </desc>
                                <path
                                  d="M12 5c-.28 0-.53.11-.71.29L8 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l4-4A1.003 1.003 0 0012 5z"
                                  fill-rule="evenodd"
                                />
                              </svg>
                            </span>
                          </span>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="StyledProps--font StyledProps--main main"
              >
                <div
                  class="StyledProps--font StyledProps--main"
                >
                  <label
                    class="Label--main bp3-label descriptionLabel"
                  >
                    optionalField
                    <span
                      class="bp3-icon StyledProps--main editOpen"
                      data-icon="Edit"
                      data-name="edit"
                      data-testid="description-edit"
                    >
                      <svg
                        height="12"
                        viewBox="0 0 16 16"
                        width="12"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          clip-rule="evenodd"
                          d="M11.207.485a.5.5 0 01.354-.146 3.5 3.5 0 013.5 3.5.5.5 0 01-.146.353l-11 11a.5.5 0 01-.354.147h-3a.5.5 0 01-.5-.5v-3a.5.5 0 01.146-.354l11-11zm.553.862L1.061 12.046v2.293h2.293l10.7-10.7a2.5 2.5 0 00-2.294-2.292z"
                          fill="currentColor"
                          fill-rule="evenodd"
                        />
                        <path
                          clip-rule="evenodd"
                          d="M11.89 2.646a.5.5 0 010 .708L8.353 6.889a.5.5 0 01-.708-.707l3.536-3.536a.5.5 0 01.707 0z"
                          fill="currentColor"
                          fill-rule="evenodd"
                          opacity="0.3"
                        />
                      </svg>
                    </span>
                  </label>
                </div>
                <div
                  class="StyledProps--font StyledProps--main"
                >
                  <label
                    class="Label--main bp3-label descriptionLabel"
                  >
                    optionalField
                    <span
                      class="bp3-icon StyledProps--main editOpen"
                      data-icon="Edit"
                      data-name="edit"
                      data-testid="tags-edit"
                    >
                      <svg
                        height="12"
                        viewBox="0 0 16 16"
                        width="12"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          clip-rule="evenodd"
                          d="M11.207.485a.5.5 0 01.354-.146 3.5 3.5 0 013.5 3.5.5.5 0 01-.146.353l-11 11a.5.5 0 01-.354.147h-3a.5.5 0 01-.5-.5v-3a.5.5 0 01.146-.354l11-11zm.553.862L1.061 12.046v2.293h2.293l10.7-10.7a2.5 2.5 0 00-2.294-2.292z"
                          fill="currentColor"
                          fill-rule="evenodd"
                        />
                        <path
                          clip-rule="evenodd"
                          d="M11.89 2.646a.5.5 0 010 .708L8.353 6.889a.5.5 0 01-.708-.707l3.536-3.536a.5.5 0 01.707 0z"
                          fill="currentColor"
                          fill-rule="evenodd"
                          opacity="0.3"
                        />
                      </svg>
                    </span>
                  </label>
                </div>
              </div>
            </div>
            <div
              class="Layout--horizontal StyledProps--main"
            >
              <button
                aria-label="saveAndContinue"
                class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color Button--withRightIcon Button--variation Button--variation-primary"
                type="submit"
              >
                <span
                  class="bp3-button-text"
                >
                  saveAndContinue
                </span>
                <span
                  class="bp3-icon bp3-icon-chevron-right StyledProps--main"
                  icon="chevron-right"
                >
                  <svg
                    data-icon="chevron-right"
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                  >
                    <desc>
                      chevron-right
                    </desc>
                    <path
                      d="M10.71 7.29l-4-4a1.003 1.003 0 00-1.42 1.42L8.59 8 5.3 11.29c-.19.18-.3.43-.3.71a1.003 1.003 0 001.71.71l4-4c.18-.18.29-.43.29-.71 0-.28-.11-.53-.29-.71z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
              </button>
            </div>
          </div>
          <div
            class="StyledProps--font StyledProps--main preview StyledProps--flex StyledProps--flex-align-center-center"
            style="width: 50%;"
          >
            <div
              class="Layout--vertical StyledProps--main StyledProps--padding-huge StyledProps--flex StyledProps--flex-align-center-center"
              style="width: 100%;"
            >
              <img
                class="img"
                src="test-file-stub"
              />
              <div
                class="Layout--vertical Layout--layout-spacing-medium StyledProps--main StyledProps--flex StyledProps--flex-alignItems-flex-start"
              >
                <p
                  class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-grey800 StyledProps--font-weight-semi-bold"
                >
                  projectsOrgs.whyCreateProject
                </p>
                <p
                  class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-grey800 StyledProps--font-small"
                >
                  projectsOrgs.createProjectMessage
                </p>
              </div>
            </div>
          </div>
        </div>
      </div>
    </form>
  </div>
</div>
`;

exports[`About Project test create project  2`] = `
<div>
  <div
    class="OverlaySpinner--overlaySpinner"
  >
    <form
      action="#"
      class="FormikForm--main"
    >
      <div>
        <div
          class="Layout--horizontal StyledProps--main"
        >
          <div
            class="Layout--vertical StyledProps--main StyledProps--padding-xxlarge"
            style="width: 50%;"
          >
            <div
              class="StyledProps--font StyledProps--main"
              style="min-height: 450px;"
            >
              <div
                class="Layout--horizontal StyledProps--main StyledProps--padding-bottom-large"
              >
                <h3
                  class="StyledProps--font StyledProps--font-h3 StyledProps--main StyledProps--font-variation-h3"
                  level="3"
                >
                  projectsOrgs.aboutProject
                </h3>
              </div>
              <div
                class="InputWithIdentifier--txtNameContainer TextInput--main"
              >
                <div
                  class="Layout--horizontal Layout--layout-spacing-xsmall StyledProps--main InputWithIdentifier--txtIdContainer"
                >
                  <div
                    class="Text--withDocsTooltip"
                    data-tooltip-id="universalInputNameWithId"
                  >
                    <p
                      class="StyledProps--font StyledProps--main"
                    >
                      Id
                    </p>
                  </div>
                  <p
                    class="StyledProps--font StyledProps--main"
                  >
                    :
                  </p>
                  <span
                    class="bp3-popover-wrapper"
                  >
                    <span
                      class="bp3-popover-target"
                    >
                      <div
                        class="bp3-editable-text InputWithIdentifier--idValue"
                        tabindex="0"
                      >
                        <span
                          class="bp3-editable-text-content"
                          style="height: 1px; line-height: 1px; min-width: 0;"
                        >
                          dummy_name
                        </span>
                      </div>
                    </span>
                  </span>
                  <span
                    class="bp3-icon StyledProps--main"
                    data-icon="Edit"
                    style="vertical-align: middle; cursor: pointer;"
                  >
                    <svg
                      height="12"
                      viewBox="0 0 16 16"
                      width="12"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        clip-rule="evenodd"
                        d="M11.207.485a.5.5 0 01.354-.146 3.5 3.5 0 013.5 3.5.5.5 0 01-.146.353l-11 11a.5.5 0 01-.354.147h-3a.5.5 0 01-.5-.5v-3a.5.5 0 01.146-.354l11-11zm.553.862L1.061 12.046v2.293h2.293l10.7-10.7a2.5 2.5 0 00-2.294-2.292z"
                        fill="currentColor"
                        fill-rule="evenodd"
                      />
                      <path
                        clip-rule="evenodd"
                        d="M11.89 2.646a.5.5 0 010 .708L8.353 6.889a.5.5 0 01-.708-.707l3.536-3.536a.5.5 0 01.707 0z"
                        fill="currentColor"
                        fill-rule="evenodd"
                        opacity="0.3"
                      />
                    </svg>
                  </span>
                </div>
                <div
                  class="bp3-form-group"
                  data-id="name-0"
                >
                  <label
                    class="bp3-label"
                    for="name"
                  >
                    <span
                      class="Tooltip--acenter"
                      data-tooltip-id="projectsForm_name"
                    >
                      Name
                    </span>
                     
                    <span
                      class="bp3-text-muted"
                    />
                  </label>
                  <div
                    class="bp3-form-content"
                  >
                    <div
                      class="bp3-input-group"
                    >
                      <input
                        autocomplete="off"
                        class="bp3-input"
                        name="name"
                        type="text"
                        value="dummy name"
                      />
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="Layout--horizontal Layout--layout-spacing-small StyledProps--main StyledProps--margin-bottom-xsmall"
              >
                <div
                  class="bp3-form-group"
                  data-id="color-1"
                >
                  <label
                    class="bp3-label"
                    for="color"
                  >
                    <span
                      class="Tooltip--acenter"
                      data-tooltip-id="projectsForm_color"
                    >
                      color
                    </span>
                     
                    <span
                      class="bp3-text-muted"
                    />
                  </label>
                  <div
                    class="bp3-form-content"
                  >
                    <span
                      class="bp3-popover-wrapper"
                    >
                      <span
                        class="bp3-popover-target"
                      >
                        <button
                          class="bp3-button Button--button StyledProps--font StyledProps--main ColorPicker--picker Button--with-current-color Button--withRightIcon"
                          style="width: 60px; height: 38px;"
                          type="button"
                        >
                          <span
                            class="bp3-button-text"
                          >
                            <span
                              class="ColorPicker--color"
                              style="width: calc(60px - 45px); background: rgb(0, 99, 247);"
                            />
                          </span>
                          <span
                            class="bp3-icon bp3-icon-caret-down StyledProps--main"
                            icon="caret-down"
                          >
                            <svg
                              data-icon="caret-down"
                              height="16"
                              viewBox="0 0 16 16"
                              width="16"
                            >
                              <desc>
                                caret-down
                              </desc>
                              <path
                                d="M12 6.5c0-.28-.22-.5-.5-.5h-7a.495.495 0 00-.37.83l3.5 4c.09.1.22.17.37.17s.28-.07.37-.17l3.5-4c.08-.09.13-.2.13-.33z"
                                fill-rule="evenodd"
                              />
                            </svg>
                          </span>
                        </button>
                      </span>
                    </span>
                  </div>
                </div>
                <div
                  class="bp3-form-group"
                  data-id="orgIdentifier-2"
                >
                  <label
                    class="bp3-label"
                    for="orgIdentifier"
                  >
                    <span
                      class="Tooltip--acenter"
                      data-tooltip-id="projectsForm_orgIdentifier"
                    >
                      orgLabel
                    </span>
                     
                    <span
                      class="bp3-text-muted"
                    />
                  </label>
                  <div
                    class="bp3-form-content"
                  >
                    <div
                      class="bp3-popover-wrapper Select--main bp3-fill"
                    >
                      <div
                        class="bp3-popover-target"
                      >
                        <div
                          class="bp3-input-group"
                        >
                          <input
                            autocomplete="off"
                            class="bp3-input"
                            name="orgIdentifier"
                            placeholder="- Select -"
                            style="padding-right: 0px;"
                            type="text"
                            value=""
                          />
                          <span
                            class="bp3-input-action"
                          >
                            <span
                              class="bp3-icon bp3-icon-chevron-down StyledProps--main StyledProps--padding-small"
                              icon="chevron-down"
                            >
                              <svg
                                data-icon="chevron-down"
                                height="14"
                                viewBox="0 0 16 16"
                                width="14"
                              >
                                <desc>
                                  chevron-down
                                </desc>
                                <path
                                  d="M12 5c-.28 0-.53.11-.71.29L8 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l4-4A1.003 1.003 0 0012 5z"
                                  fill-rule="evenodd"
                                />
                              </svg>
                            </span>
                          </span>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="StyledProps--font StyledProps--main main"
              >
                <div
                  class="StyledProps--font StyledProps--main"
                  style="margin-bottom: 0px;"
                >
                  <label
                    class="Label--main bp3-label descriptionLabel"
                  >
                    optionalField
                  </label>
                  <div
                    class="bp3-form-group"
                  >
                    <div
                      class="bp3-form-content"
                    >
                      <textarea
                        autocomplete="off"
                        class="bp3-input bp3-fill"
                        maxlength="1024"
                        name="description"
                        placeholder="common.descriptionPlaceholder"
                      >
                         This is new description
                      </textarea>
                    </div>
                  </div>
                </div>
                <div
                  class="StyledProps--font StyledProps--main"
                >
                  <label
                    class="Label--main bp3-label descriptionLabel"
                  >
                    optionalField
                    <span
                      class="bp3-icon StyledProps--main editOpen"
                      data-icon="Edit"
                      data-name="edit"
                      data-testid="tags-edit"
                    >
                      <svg
                        height="12"
                        viewBox="0 0 16 16"
                        width="12"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          clip-rule="evenodd"
                          d="M11.207.485a.5.5 0 01.354-.146 3.5 3.5 0 013.5 3.5.5.5 0 01-.146.353l-11 11a.5.5 0 01-.354.147h-3a.5.5 0 01-.5-.5v-3a.5.5 0 01.146-.354l11-11zm.553.862L1.061 12.046v2.293h2.293l10.7-10.7a2.5 2.5 0 00-2.294-2.292z"
                          fill="currentColor"
                          fill-rule="evenodd"
                        />
                        <path
                          clip-rule="evenodd"
                          d="M11.89 2.646a.5.5 0 010 .708L8.353 6.889a.5.5 0 01-.708-.707l3.536-3.536a.5.5 0 01.707 0z"
                          fill="currentColor"
                          fill-rule="evenodd"
                          opacity="0.3"
                        />
                      </svg>
                    </span>
                  </label>
                </div>
              </div>
            </div>
            <div
              class="Layout--horizontal StyledProps--main"
            >
              <button
                aria-label="saveAndContinue"
                class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color Button--withRightIcon Button--variation Button--variation-primary"
                type="submit"
              >
                <span
                  class="bp3-button-text"
                >
                  saveAndContinue
                </span>
                <span
                  class="bp3-icon bp3-icon-chevron-right StyledProps--main"
                  icon="chevron-right"
                >
                  <svg
                    data-icon="chevron-right"
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                  >
                    <desc>
                      chevron-right
                    </desc>
                    <path
                      d="M10.71 7.29l-4-4a1.003 1.003 0 00-1.42 1.42L8.59 8 5.3 11.29c-.19.18-.3.43-.3.71a1.003 1.003 0 001.71.71l4-4c.18-.18.29-.43.29-.71 0-.28-.11-.53-.29-.71z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
              </button>
            </div>
          </div>
          <div
            class="StyledProps--font StyledProps--main preview StyledProps--flex StyledProps--flex-align-center-center"
            style="width: 50%;"
          >
            <div
              class="bp3-card bp3-elevation-0 Card--card projectCard previewProjectCard"
              data-testid="project-card-dummy_name"
            >
              <div
                class="StyledProps--font StyledProps--main projectInfo StyledProps--padding-xlarge"
              >
                <div
                  class="Layout--horizontal StyledProps--main cardHeader StyledProps--flex StyledProps--flex-justifyContent-flex-end"
                />
                <div
                  class="StyledProps--font StyledProps--main"
                  data-testid="card-content"
                >
                  <div
                    class="colorBar"
                    style="background-color: rgb(0, 99, 247);"
                  />
                  <p
                    class="StyledProps--font Text--lineclamp StyledProps--main StyledProps--font-variation-card-title StyledProps--color StyledProps--color-black"
                    style="--text-line-clamp: 1;"
                  >
                    dummy name
                  </p>
                  <p
                    class="StyledProps--font Text--lineclamp StyledProps--main projectId StyledProps--font-variation-tiny StyledProps--color StyledProps--color-grey600 StyledProps--margin-bottom-medium"
                    style="--text-line-clamp: 1;"
                  >
                    idLabel
                  </p>
                  <p
                    class="StyledProps--font Text--lineclamp StyledProps--main breakWord StyledProps--font-variation-small StyledProps--color StyledProps--color-grey400"
                    style="--text-line-clamp: 2;"
                  >
                     This is new description
                  </p>
                  <div
                    class="Layout--horizontal StyledProps--main StyledProps--margin-top-xlarge"
                  >
                    <div
                      class="Layout--vertical Layout--layout-spacing-xsmall StyledProps--main StyledProps--padding-right-large"
                    >
                      <p
                        class="StyledProps--font StyledProps--main StyledProps--font-variation-tiny-semi StyledProps--color StyledProps--color-grey400 StyledProps--padding-bottom-small"
                      >
                        adminLabel
                         
                        (1)
                      </p>
                      <div
                        class="Layout--horizontal StyledProps--main StyledProps--flex StyledProps--flex-alignItems-center StyledProps--flex-justifyContent-flex-start"
                      >
                        <div
                          class="AvatarGroup--stack projectAvatarGroup"
                          style="--avatar-over-lap: -10px;"
                        >
                          <div
                            class="AvatarGroup--stackAvatar avatarGroupAdd Avatar--Avatar Avatar--contentStyle"
                          >
                            <span
                              class="bp3-popover-wrapper Avatar--avatarPopOver"
                            >
                              <span
                                class="bp3-popover-target"
                              >
                                <div
                                  class="Avatar--AvatarInner"
                                  style="border-radius: 100%; line-height: 16px; width: 24px; height: 24px; font-size: 20px; font-weight: 200;"
                                  tabindex="0"
                                >
                                  +
                                </div>
                              </span>
                            </span>
                          </div>
                          <div
                            class="AvatarGroup--stackAvatar avatarGroupAdd Avatar--Avatar Avatar--contentStyle"
                            uuid=""
                          >
                            <span
                              class="bp3-popover-wrapper Avatar--avatarPopOver"
                            >
                              <span
                                class="bp3-popover-target"
                              >
                                <div
                                  class="Avatar--AvatarInner"
                                  style="border-radius: 100%; line-height: 18px; width: 24px; height: 24px; font-size: 10px;"
                                  tabindex="0"
                                >
                                  <span
                                    class="bp3-icon StyledProps--main StyledProps--color StyledProps--color-white"
                                    data-icon="user"
                                  >
                                    <svg
                                      fill="currentColor"
                                      height="10"
                                      viewBox="0 0 61 73"
                                      width="10"
                                      xmlns="http://www.w3.org/2000/svg"
                                    >
                                      <path
                                        clip-rule="evenodd"
                                        d="M18.001 17.512c0-6.732 5.458-12.19 12.19-12.19 6.732 0 12.19 5.458 12.19 12.19 0 6.732-5.458 12.19-12.19 12.19-6.732 0-12.19-5.458-12.19-12.19zM30.191.522c-9.383 0-16.99 7.607-16.99 16.99 0 5.651 2.76 10.659 7.005 13.747L.466 68.8a2.4 2.4 0 002.123 3.517h55.206a2.4 2.4 0 002.105-3.552L39.608 31.656c4.565-3.046 7.573-8.244 7.573-14.144 0-9.383-7.607-16.99-16.99-16.99zm-5.744 32.984a16.96 16.96 0 005.744.996c1.77 0 3.476-.27 5.08-.773l18.476 33.787H6.563l17.884-34.01z"
                                        fill-rule="evenodd"
                                      />
                                    </svg>
                                  </span>
                                </div>
                              </span>
                            </span>
                          </div>
                        </div>
                      </div>
                    </div>
                    <div
                      class="Layout--vertical Layout--layout-spacing-xsmall StyledProps--main"
                    >
                      <p
                        class="StyledProps--font StyledProps--main StyledProps--font-variation-tiny-semi StyledProps--color StyledProps--color-grey400 StyledProps--padding-bottom-small"
                      >
                        collaboratorsLabel
                         
                      </p>
                      <div
                        class="Layout--horizontal StyledProps--main StyledProps--flex StyledProps--flex-alignItems-center StyledProps--flex-justifyContent-flex-start"
                      >
                        <div
                          class="AvatarGroup--stack projectAvatarGroup"
                          style="--avatar-over-lap: -10px;"
                        >
                          <div
                            class="AvatarGroup--stackAvatar avatarGroupAdd Avatar--Avatar Avatar--contentStyle"
                          >
                            <span
                              class="bp3-popover-wrapper Avatar--avatarPopOver"
                            >
                              <span
                                class="bp3-popover-target"
                              >
                                <div
                                  class="Avatar--AvatarInner"
                                  style="border-radius: 100%; line-height: 16px; width: 24px; height: 24px; font-size: 20px; font-weight: 200;"
                                  tabindex="0"
                                >
                                  +
                                </div>
                              </span>
                            </span>
                          </div>
                          <div
                            class="AvatarGroup--stackAvatar avatarGroupAdd Avatar--Avatar Avatar--contentStyle"
                          >
                            <span
                              class="bp3-popover-wrapper Avatar--avatarPopOver"
                            >
                              <span
                                class="bp3-popover-target"
                              >
                                <div
                                  class="Avatar--AvatarInner"
                                  style="border-radius: 100%; line-height: 18px; width: 24px; height: 24px; font-size: 10px;"
                                  tabindex="0"
                                >
                                  <span
                                    class="bp3-icon StyledProps--main StyledProps--color StyledProps--color-white"
                                    data-icon="user"
                                  >
                                    <svg
                                      fill="currentColor"
                                      height="10"
                                      viewBox="0 0 61 73"
                                      width="10"
                                      xmlns="http://www.w3.org/2000/svg"
                                    >
                                      <path
                                        clip-rule="evenodd"
                                        d="M18.001 17.512c0-6.732 5.458-12.19 12.19-12.19 6.732 0 12.19 5.458 12.19 12.19 0 6.732-5.458 12.19-12.19 12.19-6.732 0-12.19-5.458-12.19-12.19zM30.191.522c-9.383 0-16.99 7.607-16.99 16.99 0 5.651 2.76 10.659 7.005 13.747L.466 68.8a2.4 2.4 0 002.123 3.517h55.206a2.4 2.4 0 002.105-3.552L39.608 31.656c4.565-3.046 7.573-8.244 7.573-14.144 0-9.383-7.607-16.99-16.99-16.99zm-5.744 32.984a16.96 16.96 0 005.744.996c1.77 0 3.476-.27 5.08-.773l18.476 33.787H6.563l17.884-34.01z"
                                        fill-rule="evenodd"
                                      />
                                    </svg>
                                  </span>
                                </div>
                              </span>
                            </span>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    class="Layout--vertical StyledProps--main started StyledProps--padding-top-xlarge"
                  >
                    <p
                      class="StyledProps--font StyledProps--main StyledProps--font-variation-tiny-semi StyledProps--color StyledProps--color-grey400 StyledProps--padding-bottom-xsmall"
                    >
                      modules
                    </p>
                    <div
                      class="Layout--horizontal Layout--layout-spacing-small StyledProps--main"
                    >
                      <span
                        class="bp3-icon StyledProps--main"
                        data-icon="cd-main"
                      >
                        <svg
                          height="20"
                          viewBox="0 0 32 32"
                          width="20"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            clip-rule="evenodd"
                            d="M26.427 7.06A5.073 5.073 0 0129 11.52l-.077 8.934a5.073 5.073 0 01-2.537 4.35l-8.002 4.618a5.073 5.073 0 01-5.035.021l-7.776-4.402A5.073 5.073 0 013 20.583l.077-8.935a5.073 5.073 0 012.537-4.35l8.002-4.619a5.073 5.073 0 015.035-.02l7.776 4.402zm-2.83 6.938c-.42 1.586-2.029 2.538-3.601 2.141l-7.489-2.026a4.696 4.696 0 00-3.62.48 4.773 4.773 0 00-2.222 2.925 4.835 4.835 0 00.479 3.664 4.757 4.757 0 002.905 2.251 4.696 4.696 0 003.62-.48 4.773 4.773 0 002.222-2.924l.26-1.047a.25.25 0 00-.177-.302l-1.258-.34a.25.25 0 00-.307.18l-.256 1.025c-.426 1.602-2.064 2.556-3.651 2.127-1.582-.428-2.523-2.073-2.1-3.67.421-1.586 2.03-2.538 3.602-2.142l7.489 2.027a4.696 4.696 0 003.62-.48 4.773 4.773 0 002.222-2.925 4.835 4.835 0 00-.479-3.664 4.757 4.757 0 00-2.905-2.251 4.696 4.696 0 00-3.62.48 4.773 4.773 0 00-2.222 2.924l-.247.828a.25.25 0 00.174.312l1.259.34a.25.25 0 00.304-.169l.248-.827c.426-1.602 2.064-2.557 3.651-2.127 1.582.428 2.523 2.073 2.1 3.67z"
                            fill="url(#cd-main_svg__a)"
                            fill-rule="evenodd"
                          />
                          <defs>
                            <lineargradient
                              gradientUnits="userSpaceOnUse"
                              id="cd-main_svg__a"
                              x1="6.774"
                              x2="21.5"
                              y1="2"
                              y2="30"
                            >
                              <stop
                                stop-color="#62F91F"
                              />
                              <stop
                                offset="1"
                                stop-color="#45BD35"
                              />
                            </lineargradient>
                          </defs>
                        </svg>
                      </span>
                      <span
                        class="bp3-icon StyledProps--main"
                        data-icon="ci-main"
                      >
                        <svg
                          height="20"
                          viewBox="0 0 32 32"
                          width="20"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            clip-rule="evenodd"
                            d="M29 16a13.02 13.02 0 01-.854 4.6.387.387 0 01-.637.13l-3.99-3.94a.534.534 0 01-.085-.628c.432-.827.649-1.773.649-2.762.056-3.222-2.6-5.878-5.879-5.878-1.04 0-1.994.26-2.823.706a.53.53 0 01-.623-.08l-3.551-3.504a.48.48 0 01.154-.794A12.79 12.79 0 0116 3c7.178 0 13 5.822 13 13zM8.476 5.42a.582.582 0 01.746.072l4.035 4.035c.179.178.194.46.054.67a5.829 5.829 0 00-.985 3.26 5.934 5.934 0 005.935 5.934 5.829 5.829 0 003.26-.985.531.531 0 01.67.054l4.367 4.368a.582.582 0 01.065.756C24.225 26.86 20.4 29 16 29 8.822 29 3 23.178 3 16c0-4.403 2.144-8.231 5.476-10.58zm9.785 11.71a3.932 3.932 0 003.956-3.956 3.932 3.932 0 00-3.956-3.957 3.932 3.932 0 00-3.957 3.957 3.932 3.932 0 003.957 3.956z"
                            fill="url(#ci-main_svg__a)"
                            fill-rule="evenodd"
                          />
                          <defs>
                            <lineargradient
                              gradientUnits="userSpaceOnUse"
                              id="ci-main_svg__a"
                              x1="-5.398"
                              x2="11.398"
                              y1="11.398"
                              y2="37.398"
                            >
                              <stop
                                stop-color="#73DFE7"
                              />
                              <stop
                                offset="1"
                                stop-color="#0095F7"
                              />
                            </lineargradient>
                          </defs>
                        </svg>
                      </span>
                      <span
                        class="bp3-icon StyledProps--main"
                        data-icon="cf-main"
                      >
                        <svg
                          height="20"
                          viewBox="0 0 32 32"
                          width="20"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <lineargradient
                            gradientUnits="userSpaceOnUse"
                            id="cf-main_svg__a"
                            x1="6.837"
                            x2="23.78"
                            y1="2"
                            y2="28.227"
                          >
                            <stop
                              offset="0"
                              stop-color="#ffc100"
                            />
                            <stop
                              offset="1"
                              stop-color="#e66b35"
                            />
                          </lineargradient>
                          <g
                            fill="url(#cf-main_svg__a)"
                          >
                            <path
                              d="M10.632 2.08A5.19 5.19 0 004.62 6.29L2.08 20.697a5.19 5.19 0 004.21 6.012l7.463 1.316a.2.2 0 00.208-.298L6.882 15.656c-.296-.469-.292-1.382.05-1.6.08-.05.313-.259.313-.259l.398-.436.066-.072c.37-.406.704-.773 1.76-1.302l.227-.079c1.548-.484 2.41-.449 3.27-.414.862.035 1.724.07 3.274-.414 1.272-.398 2.43-1.178 3.074-1.667a.622.622 0 01.9.15l4.596 7.362a.53.53 0 01-.101.696 8.694 8.694 0 01-2.834 1.538c-1.549.484-2.432.463-3.316.442-.884-.021-1.768-.042-3.318.442-1.314.41-1.868.948-2.07 1.204-.048.061-.07.21-.032.279.4.724 2.295 4.06 3.794 6.693a.998.998 0 00.695.49l3.07.541a5.19 5.19 0 006.012-4.21l2.54-14.408a5.19 5.19 0 00-4.21-6.012z"
                            />
                            <path
                              d="M16.646 13.074c-1.303.34-2.093.316-2.882.29-.79-.024-1.58-.049-2.881.291-.744.216-1.178.592-1.587 1.072a.197.197 0 00-.018.23l2.482 4.069c.064.106.209.13.307.055.374-.283 1.28-.9 2.42-1.198 1.469-.383 2.348-.375 3.273-.366.717.007 1.462.014 2.53-.16a4.454 4.454 0 001.629-.635.347.347 0 00.094-.488L19.472 12.3a.421.421 0 00-.56-.128 9.57 9.57 0 01-2.265.902z"
                            />
                          </g>
                        </svg>
                      </span>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </form>
  </div>
</div>
`;

exports[`About Project test edit project  1`] = `
<div>
  <div
    class="OverlaySpinner--overlaySpinner"
  >
    <form
      action="#"
      class="FormikForm--main"
    >
      <div>
        <div
          class="Layout--horizontal StyledProps--main"
        >
          <div
            class="Layout--vertical StyledProps--main StyledProps--padding-xxlarge"
            style="width: 100%;"
          >
            <div
              class="StyledProps--font StyledProps--main"
              style="min-height: 450px;"
            >
              <div
                class="Layout--horizontal StyledProps--main StyledProps--padding-bottom-large"
              >
                <h3
                  class="StyledProps--font StyledProps--font-h3 StyledProps--main StyledProps--font-variation-h3"
                  level="3"
                >
                  projectsOrgs.projectEdit
                </h3>
              </div>
              <div
                class="InputWithIdentifier--txtNameContainer TextInput--main"
              >
                <div
                  class="Layout--horizontal Layout--layout-spacing-xsmall StyledProps--main InputWithIdentifier--txtIdContainer"
                >
                  <div
                    class="Text--withDocsTooltip"
                    data-tooltip-id="universalInputNameWithId"
                  >
                    <p
                      class="StyledProps--font StyledProps--main"
                    >
                      Id
                    </p>
                  </div>
                  <p
                    class="StyledProps--font StyledProps--main"
                  >
                    :
                  </p>
                  <span
                    class="bp3-popover-wrapper"
                  >
                    <span
                      class="bp3-popover-target"
                    >
                      <div
                        class="bp3-editable-text bp3-disabled InputWithIdentifier--idValue"
                      >
                        <span
                          class="bp3-editable-text-content"
                          style="height: 1px; line-height: 1px; min-width: 0;"
                        >
                          test
                        </span>
                      </div>
                    </span>
                  </span>
                </div>
                <div
                  class="bp3-form-group"
                  data-id="name-0"
                >
                  <label
                    class="bp3-label"
                    for="name"
                  >
                    <span
                      class="Tooltip--acenter"
                      data-tooltip-id="projectsForm_name"
                    >
                      Name
                    </span>
                     
                    <span
                      class="bp3-text-muted"
                    />
                  </label>
                  <div
                    class="bp3-form-content"
                  >
                    <div
                      class="bp3-input-group"
                    >
                      <input
                        autocomplete="off"
                        class="bp3-input"
                        name="name"
                        type="text"
                        value="test modified"
                      />
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="Layout--horizontal Layout--layout-spacing-small StyledProps--main StyledProps--margin-bottom-xsmall"
              >
                <div
                  class="bp3-form-group"
                  data-id="color-1"
                >
                  <label
                    class="bp3-label"
                    for="color"
                  >
                    <span
                      class="Tooltip--acenter"
                      data-tooltip-id="projectsForm_color"
                    >
                      color
                    </span>
                     
                    <span
                      class="bp3-text-muted"
                    />
                  </label>
                  <div
                    class="bp3-form-content"
                  >
                    <span
                      class="bp3-popover-wrapper"
                    >
                      <span
                        class="bp3-popover-target"
                      >
                        <button
                          class="bp3-button Button--button StyledProps--font StyledProps--main ColorPicker--picker Button--with-current-color Button--withRightIcon"
                          style="width: 60px; height: 38px;"
                          type="button"
                        >
                          <span
                            class="bp3-button-text"
                          >
                            <span
                              class="ColorPicker--color"
                              style="width: calc(60px - 45px); background: rgb(0, 99, 247);"
                            />
                          </span>
                          <span
                            class="bp3-icon bp3-icon-caret-down StyledProps--main"
                            icon="caret-down"
                          >
                            <svg
                              data-icon="caret-down"
                              height="16"
                              viewBox="0 0 16 16"
                              width="16"
                            >
                              <desc>
                                caret-down
                              </desc>
                              <path
                                d="M12 6.5c0-.28-.22-.5-.5-.5h-7a.495.495 0 00-.37.83l3.5 4c.09.1.22.17.37.17s.28-.07.37-.17l3.5-4c.08-.09.13-.2.13-.33z"
                                fill-rule="evenodd"
                              />
                            </svg>
                          </span>
                        </button>
                      </span>
                    </span>
                  </div>
                </div>
                <div
                  class="bp3-form-group bp3-disabled"
                  data-id="orgIdentifier-2"
                >
                  <label
                    class="bp3-label"
                    for="orgIdentifier"
                  >
                    <span
                      class="Tooltip--acenter"
                      data-tooltip-id="projectsForm_orgIdentifier"
                    >
                      orgLabel
                    </span>
                     
                    <span
                      class="bp3-text-muted"
                    />
                  </label>
                  <div
                    class="bp3-form-content"
                  >
                    <div
                      class="bp3-popover-wrapper Select--main bp3-fill"
                    >
                      <div
                        class="bp3-popover-target"
                      >
                        <div
                          class="bp3-input-group bp3-disabled"
                        >
                          <input
                            autocomplete="off"
                            class="bp3-input"
                            disabled=""
                            name="orgIdentifier"
                            placeholder="- Select -"
                            style="padding-right: 0px;"
                            type="text"
                            value="Org Name"
                          />
                          <span
                            class="bp3-input-action"
                          >
                            <span
                              class="bp3-icon bp3-icon-chevron-down StyledProps--main StyledProps--padding-small"
                              icon="chevron-down"
                            >
                              <svg
                                data-icon="chevron-down"
                                height="14"
                                viewBox="0 0 16 16"
                                width="14"
                              >
                                <desc>
                                  chevron-down
                                </desc>
                                <path
                                  d="M12 5c-.28 0-.53.11-.71.29L8 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l4-4A1.003 1.003 0 0012 5z"
                                  fill-rule="evenodd"
                                />
                              </svg>
                            </span>
                          </span>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="StyledProps--font StyledProps--main main"
              >
                <div
                  class="StyledProps--font StyledProps--main"
                  style="margin-bottom: 0px;"
                >
                  <label
                    class="Label--main bp3-label descriptionLabel"
                  >
                    optionalField
                  </label>
                  <div
                    class="bp3-form-group"
                    data-id="description-3"
                  >
                    <div
                      class="bp3-form-content"
                    >
                      <textarea
                        autocomplete="off"
                        class="bp3-input bp3-fill"
                        maxlength="1024"
                        name="description"
                        placeholder="common.descriptionPlaceholder"
                      >
                        refetch returns new data
                      </textarea>
                    </div>
                  </div>
                </div>
                <div
                  class="StyledProps--font StyledProps--main"
                >
                  <label
                    class="Label--main bp3-label descriptionLabel"
                  >
                    optionalField
                    <span
                      class="bp3-icon StyledProps--main editOpen"
                      data-icon="Edit"
                      data-name="edit"
                      data-testid="tags-edit"
                    >
                      <svg
                        height="12"
                        viewBox="0 0 16 16"
                        width="12"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          clip-rule="evenodd"
                          d="M11.207.485a.5.5 0 01.354-.146 3.5 3.5 0 013.5 3.5.5.5 0 01-.146.353l-11 11a.5.5 0 01-.354.147h-3a.5.5 0 01-.5-.5v-3a.5.5 0 01.146-.354l11-11zm.553.862L1.061 12.046v2.293h2.293l10.7-10.7a2.5 2.5 0 00-2.294-2.292z"
                          fill="currentColor"
                          fill-rule="evenodd"
                        />
                        <path
                          clip-rule="evenodd"
                          d="M11.89 2.646a.5.5 0 010 .708L8.353 6.889a.5.5 0 01-.708-.707l3.536-3.536a.5.5 0 01.707 0z"
                          fill="currentColor"
                          fill-rule="evenodd"
                          opacity="0.3"
                        />
                      </svg>
                    </span>
                  </label>
                </div>
              </div>
            </div>
            <div
              class="Layout--horizontal StyledProps--main"
            >
              <button
                aria-label="save"
                class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color Button--variation Button--variation-primary"
                type="submit"
              >
                <span
                  class="bp3-button-text"
                >
                  save
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
    </form>
  </div>
</div>
`;

exports[`About Project test edit project  2`] = `
<div>
  <div
    class="OverlaySpinner--overlaySpinner"
  >
    <form
      action="#"
      class="FormikForm--main"
    >
      <div>
        <div
          class="Layout--horizontal StyledProps--main"
        >
          <div
            class="Layout--vertical StyledProps--main StyledProps--padding-xxlarge"
            style="width: 100%;"
          >
            <div
              class="StyledProps--font StyledProps--main"
              style="min-height: 450px;"
            >
              <div
                class="Layout--horizontal StyledProps--main StyledProps--padding-bottom-large"
              >
                <h3
                  class="StyledProps--font StyledProps--font-h3 StyledProps--main StyledProps--font-variation-h3"
                  level="3"
                >
                  projectsOrgs.projectEdit
                </h3>
              </div>
              <div
                class="InputWithIdentifier--txtNameContainer TextInput--main"
              >
                <div
                  class="Layout--horizontal Layout--layout-spacing-xsmall StyledProps--main InputWithIdentifier--txtIdContainer"
                >
                  <div
                    class="Text--withDocsTooltip"
                    data-tooltip-id="universalInputNameWithId"
                  >
                    <p
                      class="StyledProps--font StyledProps--main"
                    >
                      Id
                    </p>
                  </div>
                  <p
                    class="StyledProps--font StyledProps--main"
                  >
                    :
                  </p>
                  <span
                    class="bp3-popover-wrapper"
                  >
                    <span
                      class="bp3-popover-target"
                    >
                      <div
                        class="bp3-editable-text bp3-disabled InputWithIdentifier--idValue"
                      >
                        <span
                          class="bp3-editable-text-content"
                          style="height: 1px; line-height: 1px; min-width: 0;"
                        >
                          test
                        </span>
                      </div>
                    </span>
                  </span>
                </div>
                <div
                  class="bp3-form-group"
                  data-id="name-0"
                >
                  <label
                    class="bp3-label"
                    for="name"
                  >
                    <span
                      class="Tooltip--acenter"
                      data-tooltip-id="projectsForm_name"
                    >
                      Name
                    </span>
                     
                    <span
                      class="bp3-text-muted"
                    />
                  </label>
                  <div
                    class="bp3-form-content"
                  >
                    <div
                      class="bp3-input-group"
                    >
                      <input
                        autocomplete="off"
                        class="bp3-input"
                        name="name"
                        type="text"
                        value="dummy name_updated"
                      />
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="Layout--horizontal Layout--layout-spacing-small StyledProps--main StyledProps--margin-bottom-xsmall"
              >
                <div
                  class="bp3-form-group"
                  data-id="color-1"
                >
                  <label
                    class="bp3-label"
                    for="color"
                  >
                    <span
                      class="Tooltip--acenter"
                      data-tooltip-id="projectsForm_color"
                    >
                      color
                    </span>
                     
                    <span
                      class="bp3-text-muted"
                    />
                  </label>
                  <div
                    class="bp3-form-content"
                  >
                    <span
                      class="bp3-popover-wrapper"
                    >
                      <span
                        class="bp3-popover-target"
                      >
                        <button
                          class="bp3-button Button--button StyledProps--font StyledProps--main ColorPicker--picker Button--with-current-color Button--withRightIcon"
                          style="width: 60px; height: 38px;"
                          type="button"
                        >
                          <span
                            class="bp3-button-text"
                          >
                            <span
                              class="ColorPicker--color"
                              style="width: calc(60px - 45px); background: rgb(0, 99, 247);"
                            />
                          </span>
                          <span
                            class="bp3-icon bp3-icon-caret-down StyledProps--main"
                            icon="caret-down"
                          >
                            <svg
                              data-icon="caret-down"
                              height="16"
                              viewBox="0 0 16 16"
                              width="16"
                            >
                              <desc>
                                caret-down
                              </desc>
                              <path
                                d="M12 6.5c0-.28-.22-.5-.5-.5h-7a.495.495 0 00-.37.83l3.5 4c.09.1.22.17.37.17s.28-.07.37-.17l3.5-4c.08-.09.13-.2.13-.33z"
                                fill-rule="evenodd"
                              />
                            </svg>
                          </span>
                        </button>
                      </span>
                    </span>
                  </div>
                </div>
                <div
                  class="bp3-form-group bp3-disabled"
                  data-id="orgIdentifier-2"
                >
                  <label
                    class="bp3-label"
                    for="orgIdentifier"
                  >
                    <span
                      class="Tooltip--acenter"
                      data-tooltip-id="projectsForm_orgIdentifier"
                    >
                      orgLabel
                    </span>
                     
                    <span
                      class="bp3-text-muted"
                    />
                  </label>
                  <div
                    class="bp3-form-content"
                  >
                    <div
                      class="bp3-popover-wrapper Select--main bp3-fill"
                    >
                      <div
                        class="bp3-popover-target"
                      >
                        <div
                          class="bp3-input-group bp3-disabled"
                        >
                          <input
                            autocomplete="off"
                            class="bp3-input"
                            disabled=""
                            name="orgIdentifier"
                            placeholder="- Select -"
                            style="padding-right: 0px;"
                            type="text"
                            value="Org Name"
                          />
                          <span
                            class="bp3-input-action"
                          >
                            <span
                              class="bp3-icon bp3-icon-chevron-down StyledProps--main StyledProps--padding-small"
                              icon="chevron-down"
                            >
                              <svg
                                data-icon="chevron-down"
                                height="14"
                                viewBox="0 0 16 16"
                                width="14"
                              >
                                <desc>
                                  chevron-down
                                </desc>
                                <path
                                  d="M12 5c-.28 0-.53.11-.71.29L8 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l4-4A1.003 1.003 0 0012 5z"
                                  fill-rule="evenodd"
                                />
                              </svg>
                            </span>
                          </span>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="StyledProps--font StyledProps--main main"
              >
                <div
                  class="StyledProps--font StyledProps--main"
                  style="margin-bottom: 0px;"
                >
                  <label
                    class="Label--main bp3-label descriptionLabel"
                  >
                    optionalField
                  </label>
                  <div
                    class="bp3-form-group"
                    data-id="description-3"
                  >
                    <div
                      class="bp3-form-content"
                    >
                      <textarea
                        autocomplete="off"
                        class="bp3-input bp3-fill"
                        maxlength="1024"
                        name="description"
                        placeholder="common.descriptionPlaceholder"
                      >
                        refetch returns new data
                      </textarea>
                    </div>
                  </div>
                </div>
                <div
                  class="StyledProps--font StyledProps--main"
                >
                  <label
                    class="Label--main bp3-label descriptionLabel"
                  >
                    optionalField
                    <span
                      class="bp3-icon StyledProps--main editOpen"
                      data-icon="Edit"
                      data-name="edit"
                      data-testid="tags-edit"
                    >
                      <svg
                        height="12"
                        viewBox="0 0 16 16"
                        width="12"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          clip-rule="evenodd"
                          d="M11.207.485a.5.5 0 01.354-.146 3.5 3.5 0 013.5 3.5.5.5 0 01-.146.353l-11 11a.5.5 0 01-.354.147h-3a.5.5 0 01-.5-.5v-3a.5.5 0 01.146-.354l11-11zm.553.862L1.061 12.046v2.293h2.293l10.7-10.7a2.5 2.5 0 00-2.294-2.292z"
                          fill="currentColor"
                          fill-rule="evenodd"
                        />
                        <path
                          clip-rule="evenodd"
                          d="M11.89 2.646a.5.5 0 010 .708L8.353 6.889a.5.5 0 01-.708-.707l3.536-3.536a.5.5 0 01.707 0z"
                          fill="currentColor"
                          fill-rule="evenodd"
                          opacity="0.3"
                        />
                      </svg>
                    </span>
                  </label>
                </div>
              </div>
            </div>
            <div
              class="Layout--horizontal StyledProps--main"
            >
              <button
                aria-label="save"
                class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color Button--variation Button--variation-primary"
                type="submit"
              >
                <span
                  class="bp3-button-text"
                >
                  save
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
    </form>
  </div>
</div>
`;
